nullaway_error_2b9a86ac-b91a-42b5-aa15-01aa84b6509a.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/behavior/AStarPathFinder.java:182: error: [NullAway] dereferenced expression currentNode is @Nullable
      currentNode = currentNode.getPredecessor();
                               ^
    (see http://t.uber.com/nullaway )
